--- a/API.video/src/main/resources/application.properties
+++ b/API.video/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=API.video
-import java.util.List;
+spring.datasource.url=jdbc:mysql://localhost:3306/TP1Seminario
+spring.datasource.username=root
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
